--- a/app/src/main/res/layout/activity_add_employee.xml
+++ b/app/src/main/res/layout/activity_add_employee.xml
@@ -50,4 +50,10 @@
         android:text="Add"
         android:layout_height="wrap_content" />
 
+    <ProgressBar
+        android:visibility="gone"
+        android:layout_marginTop="10dp"
+        android:id="@+id/progress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 </LinearLayout>
